--- a/unoCounter.css
+++ b/unoCounter.css
@@ -1,21 +1,193 @@
-#addPlayers{
-    display: block;
+
+/*Mobile:*/
+@media screen and (max-width: 480px) {
+    body{
+        background-color: #f9462b;
+        /*color tries
+        #f9462b
+        #ed5b37
+        */
+    }
+    /*size*/
+    #wrapper{
+        width: 100%;
+        font-family: "Roboto", sans-serif;
+    }
+    h1 {
+        margin: 40px auto 20px auto;
+        color: #fadf0f;
+        text-align: center;
+        font-family: "Caveat";
+        font-size: 45px;
+    }
+
+    /*adding players*/
+    #addPlayers{
+        display: block;
+        text-align: center;
+    }
+    input {
+        width: 50%;
+        height: 30px;
+        margin: 20px;
+    }
+    #addPlayerButton{
+        width: 50%;
+        height: 40px;
+        margin: 0px auto 20px auto;
+        background-color: #fadf0f;
+        color: #e60012;
+        border: #000001 solid 2px;
+        text-align: center;
+        font-size: 16px;
+    }
+    #addPlayerButton:hover{
+        background-color: #e60012;
+        color: #fadf0f;
+    }
+    #startGameButton{
+        width: 50%;
+        height: 40px;
+        background-color: #e60012;
+        color: white;
+        border: none;
+        text-align: center;
+        font-size: 16px;
+    }
+    #currentPlayersHeading{
+        margin: 30px auto 10px auto;
+        color: white;
+        font-size: 18px;
+        border-top: #fadf0f solid 2px;
+        padding-top: 10px;
+    }
+    #currentPlayers{
+        list-style-type: none;
+        color: white;
+    }
+
+
+    /*adding new round*/
+    #nextRoundButton{
+        display: none;
+        text-align: center;
+        width: 50%;
+        height: 40px;
+        margin: 0px auto 20px auto;
+        background-color: #fadf0f;
+        color: #e60012;
+        border: #000001 solid 2px;
+        font-size: 16px;
+    }
+    #scoreAdderName{
+        color: white;
+        /*border-top: #fadf0f solid 2px;*/
+        text-align: center;
+        font-size: 18px;
+    }
+    #round{
+        text-align: center;
+        color: white;
+        border-top: #fadf0f solid 2px;
+        border-bottom: #fadf0f solid 2px;
+        padding: 10px;
+
+    }
+    #scoreInput{
+        width: 30%;
+        margin: auto 5px 20px 5px;
+    }
+    #addScoreButton{
+        width: 25%;
+        height: 40px;
+        background-color: #e60012;
+        color: white;
+        border: none;
+        text-align: center;
+        font-size: 16px;
+        border: #000001 solid 1px;
+
+    }
+
+    /*results*/
+    #showResultsButton{
+        display: none;
+        text-align: center;
+        width: 50%;
+        height: 40px;
+        margin: 20px auto 20px auto;
+        background-color: #fadf0f;
+        color: #e60012;
+        border: #000001 solid 2px;
+        font-size: 16px;
+    }
+    #hideResultsButton{
+        display: none;
+        text-align: center;
+        width: 50%;
+        height: 40px;
+        margin: 20px auto 20px auto;
+        background-color: #fadf0f;
+        color: #e60012;
+        border: #000001 solid 2px;
+        font-size: 16px;
+    }
+    #results{
+        text-align: center;
+        color: white;
+    }
+
+
+    /*initial element-hiding:*/
+    #round{
+        display: none;
+    }
+    #results{
+        display: none;
+    }
+    #showResultsButton{
+        display: none;
+    }
+    #hideResultsButton{
+        display: none;
+    }
+
+    /*Player Input*/
+
+
+    
 }
-#round{
-    display: none;
-}
-#results{
-    display: none;
-}
-#showResultsButton{
-    display: none;
-}
-#hideResultsButton{
-    display: none;
-}
-#nextRoundButton{
-    display: none;
-} 
-.buttonDivider{
-    margin: 20px;
+    
+
+
+@media screen and (min-width: 480px) {
+    #addPlayers{
+        display: block;
+    }
+    #round{
+        display: none;
+    }
+    #results{
+        display: none;
+    }
+    #showResultsButton{
+        display: none;
+    }
+    #hideResultsButton{
+        display: none;
+    }
+    #nextRoundButton{
+        display: none;
+    } 
+    .buttonDivider{
+        margin: 20px;
+        color: red;
+    }
+    .button{
+        color: red;
+    }
+    #addPlayerButton{
+        color: blue;
+    }
+        
 }
